Style sheet basic added.

--- a/index.html
+++ b/index.html
@@ -1,4 +1,69 @@
 <html>
-<body>
+<head> 
+	<title> Style Guide for CS 184 :: Shubham Goel </title> 
+	<link rel="stylesheet" type="text/css" href="mystyle.css">
+</head>
+<body class = "body">
+	<center><h1>Welcome to my Style Guide!</h1></center>
+	<section class = "section">
+	Click on a tag to see its style : 
+	<ul>
+		<li> <a  href = "#yay">Section</a> 
+		<li> Address
+		<li> Paragraph 
+		<li> Horizontal Line
+		<li> BlockQuote
+		<li> Lists
+		<li> Definition
+		<li> Anchor
+		<li> Inline Quotation
+		<li> Abbreviation
+		<li> Computer Code
+		<li> Variable
+		<li> Image
+		<li> Canvas?
+		<li> Border
+		<li> Math
+		<li> Table
+		<li> Form
+	</ul>
+	</section>
+	Stuff<br>
+	Stuff<br>
+	Stuff<br>
+	Stuff<br>
+	Stuff<br>
+	Stuff<br>
+	Stuff<br>
+	Stuff<br>
+	Stuff<br>
+	Stuff<br>
+	Stuff<br>
+	Stuff<br>
+	Stuff	<br>
+	Stuff<br>
+	Stuff<br>
+	Stuff<br>
+	Stuff<br>
+Stuff	<br>
+Stuff	Stuff<br>
+vStuff	<br>
+StStuffuff	<br>
+Stuff	<br>
+Stuff	<br>
+Stuff		<br>
+Stuff	<br>
+StuffStuffStuffStuffStuff	<br>
+StuffStuffStuffStuffStuffStuff	<br>
+StuffStuffStuff	<br>
+StuffStuffStuffStuff	<br>
+Stuff	<br>
+StuffStuff	<br>
+Stuff	<br>
+StuffStuff	<br>
+Stuff	<br>
+	<a id= "yay"> 
+		Section Stuff
+	</a>
 </body>
 </html>
